src/objects/Apttus_Config2__ProductConstraintView__c.object
<CustomObject>
    <description>Creates product and constraint rule view table based on the definition of product scope in constraint rule condition.</description>
    <fields>
        <fullName>Apttus_Config2__ConstraintRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the constraint rule associated with the product</description>
        <label>Constraint Rule</label>
        <referenceTo>Apttus_Config2__ConstraintRule__c</referenceTo>
        <relationshipLabel>Product Constraint Views</relationshipLabel>
        <relationshipName>ProductConstraintViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CriteriaFields__c</fullName>
        <description>List of fields used in condition criteria filter</description>
        <label>Criteria Fields</label>
        <length>8096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasCriteriaInCondition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the constraint rule has criteria in condition</description>
        <label>Has Criteria In Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsOption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the rule considers the Product only when it is added to the cart as an option.</description>
        <label>Is Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the rule considers the product only if it is added to the cart as a primary product which is not an option.</description>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the constraint rule is applied within location. If any one of the condition is matched in location the entire rule should be considered as applied within location.</description>
        <label>Match In Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product or option associated with the rule condition</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Constraint Views</relationshipLabel>
        <relationshipName>ProductConstraintViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Constraint View</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>Apttus_Config2__ProductId__c</columns>
        <columns>Apttus_Config2__ConstraintRuleId__c</columns>
        <columns>Apttus_Config2__IsOption__c</columns>
        <columns>Apttus_Config2__IsPrimary__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>View Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Constraint Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>